prerequisites/networking/openstack-internal-gateway/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openstack-internal-gateway-system
  labels:
    app.kubernetes.io/part-of: openstack-internal-gateway
