prerequisites/networking/openstack-internal-gateway/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openstack-internal-gateway
  namespace: openstack-internal-gateway-system
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.21.7
  listeners:
    - name: https
      hostname: api.internal.cloud.dcn.ssu.ac.kr
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: openstack-internal-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: openstack
